fix: system scrollbar color

--- a/src/drawer/component/drawer.component.scss
+++ b/src/drawer/component/drawer.component.scss
@@ -9,13 +9,7 @@ $drawer: aui-drawer;
   left: 0;
   width: 100%;
   height: 0;
-
-  @include theme-light {
-    background-color: use-rgba(origin-shadow, 0.4);
-  }
-  @include theme-dark {
-    background-color: use-rgba(origin-shadow, 0.65);
-  }
+  @include modal-backdrop;
 
   &.isOpen {
     height: 100%;
@@ -49,14 +43,14 @@ $drawer: aui-drawer;
   }
 
   &__header {
-    margin: 20px 20px 0 20px;
+    margin: 20px 20px 0;
     display: flex;
     justify-content: space-between;
   }
 
   &.hasDivider {
     .#{$drawer}__header {
-      margin: 20px 20px -4px 20px;
+      margin: 20px 20px -4px;
       padding-bottom: 16px;
       border-bottom: 1px solid use-rgb(n-8);
     }
@@ -88,8 +82,7 @@ $drawer: aui-drawer;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+    flex-flow: column nowrap;
     position: relative;
     z-index: 1;
   }
@@ -102,7 +95,7 @@ $drawer: aui-drawer;
   }
 
   &__footer {
-    margin: -4px 20px 20px 20px;
+    margin: -4px 20px 20px;
     padding-top: 16px;
     border-top: 1px solid use-rgb(n-8);
   }
